# ProjectURLREDUCE

./: README.md  manage.py  pyproject.toml
UrlReduce/: Procfile  asgi.py  settings.py  urls.py  wsgi.py
UrlReduce/encurter/: admin.py  apps.py  models.py  views.py
UrlReduce/encurter/migrations/: 0001_initial.py  0002_criacao_url_log.py
UrlReduce/encurter/templates/encurter/: index.html  relatorio.html
staticfiles/: staticfiles.json
