[tool.poetry]
name = "Projeto URLs Reduce"
version = "0.1.0"
description = "Projeto \\\"URL Reduce\\\" é um encurtador de URLs desenvolvido em uma das edições da Jornada Rumo a Primeira Vaga"
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
